# svensk-flyt

./: .env.example  .gitignore  README.md  pyproject.toml
.dlt/: config.toml  secrets.toml.example
dbt/: dbt_project.yml  profiles.yml.example
dbt/docs/: data_model.md  model_transformations.md
dbt/macros/: .gitkeep
dbt/models/: sources.yml
dbt/models/dim/: dim_date.sql  schema.yml
dbt/models/fct/: fct_airline_performance.sql  fct_baggage_performance.sql  fct_flights.sql  fct_hourly_traffic.sql  fct_terminal_performance.sql  schema.yml
dbt/models/mart/: mart_airline_punctuality.sql  mart_airport_hourly_traffic.sql  mart_airport_punctuality.sql  mart_baggage_performance.sql  mart_route_popularity.sql  schema.yml
dbt/models/marts/airline/: dim_airline.sql  fct_airline_performance.sql  schema.yml
dbt/models/marts/airport/: dim_airport.sql  fct_airport_daily_traffic.sql  schema.yml
dbt/models/marts/fct/: fct_airport_daily_traffic.sql  fct_gate_utilization.sql
dbt/models/marts/operations/: schema.yml
dbt/models/marts/reports/: rpt_airport_hourly_traffic.sql  rpt_airport_punctuality.sql  rpt_baggage_performance.sql  rpt_route_popularity.sql  schema.yml
dbt/models/staging/: stg_flights_arrivals.sql  stg_flights_departures.sql
dbt/snapshots/: .gitkeep
dbt/tests/: .gitkeep
docs/: DESIGN_DECISIONS.md
notebooks/: 01_eda_raw_data.ipynb
src/svensk_flyt/: __init__.py  constants.py  definitions.py
src/svensk_flyt/pipelines/: __init__.py  run.py
tests/: API_TESTING.md  test_api_backfill.py  test_api_raw.py  test_swedavia_api.py
(+6 files in other folders)
